@@ -1,8 +1,12 @@
+2004-02-10  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* data/bg/hawk.shp: hawk paperdoll art
+
 2004-02-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* data/bg/death_scythe.shp: death scythe paperdoll art
 	* data/bg/firewand.shp: fire wand paperdoll art
 	* data/bg/knife.shp: knife paperdoll art
 	* data/bg/starburst.shp: starburst paperdoll art (belt-only)
+	* data/bg/hawk.shp: hawk paperdoll art
 
 2004-02-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* exult.cc: rotate colours 0xFC-0xFE (Juggernaut Hammer)
